change the name to a view

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
         },
         {
           "type": "webview",
-          "id": "easy-tailwindcss.messagesView",
-          "name": "Add Message"
+          "id": "easy-tailwindcss.tailwindCssHelperView",
+          "name": "TailwindCSS Helper"
         }
       ]
     },
