--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         {
           "id": "first-view",
           "title": "Easy Tailwind",
-          "icon": ""
+          "icon": "media/icon.svg"
         }
       ]
     },
