--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.15.0"
+    "@ai-sdk/google": "^0.0.30",
+    "ai": "^3.2.37"
   }
 }
