--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "easy-tailwindcss",
   "displayName": "Easy TailwindCss",
-  "description": "",
-  "version": "0.0.1",
+  "description": "Easy TailwindCss is designed to help you get classes without needing to remember the exact TailwindCSS syntax.",
+  "publisher": "josenromero",
+  "icon": "media/easy-tailwind-icon.png",
+  "version": "0.5.0",
   "engines": {
     "vscode": "^1.91.0"
   },
@@ -96,5 +98,6 @@
   "dependencies": {
     "@ai-sdk/google": "^0.0.30",
     "ai": "^3.2.37"
-  }
+  },
+  "license": "SEE LICENSE IN LICENSE.txt"
 }
